# forking-benchmark

./: CMakeLists.txt  README.md
scripts/: clone_graph.plot  graph.plot  run_clone_test.py  run_test.py
src/: CMakeLists.txt  clone.cpp  clone_benchmark.cpp  forking_benchmark.cpp
test/: CMakeLists.txt
