cmake_minimum_required (VERSION 2.6)
SET(PROJECT_PREFIX "Forking-Benchmark")
PROJECT(${PROJECT_PREFIX})

set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -Werror")

SET(BIN_OUTPUT_DIR ${${PROJECT_PREFIX}_BINARY_DIR}/bin)
SET(LIB_OUTPUT_DIR ${${PROJECT_PREFIX}_BINARY_DIR}/lib)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_OUTPUT_DIR})

FILE(COPY scripts/run_test.py DESTINATION scripts)
FILE(COPY scripts/graph.plot DESTINATION scripts)

ENABLE_TESTING()
ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(test)
